addresses review comments